fixed responsive sizing of article data under the article image in smaller view and the title that overlaps the Popular articles banner

--- a/frontend/src/Components/Home/RecentArticles/RecentArticleItem/RecentArticleItem.scss
+++ b/frontend/src/Components/Home/RecentArticles/RecentArticleItem/RecentArticleItem.scss
@@ -11,6 +11,12 @@
   display: flex;
   //   min-width: 300px;
 
+  @media (min-width: 100px) {
+    flex-direction: column;
+    gap: 15px;
+    width: 300px;
+  }
+
   @media (min-width: 300px) {
     flex-direction: column;
     gap: 20px;
@@ -35,10 +41,12 @@
 
   @media (min-width: 990px) {
     width: 350px;
+    gap: 25px;
   }
 
   @media (min-width: 1400px) {
     width: 900px;
+    gap: 30px;
   }
 }
 
@@ -88,12 +96,16 @@
 // recent article title
 .recent-article-title {
   text-decoration: none;
-  width: 450px;
   font-weight: 600;
-  min-width: 300px;
+  min-width: 200px;
+  font-size: 1em;
+
+  @media (min-width: 100px) {
+    width: 10vw;
+  }
 
   @media (min-width: 300px) {
-    width: 300px;
+    width: 90vw;
     font-size: 1.3em;
   }
 
@@ -102,12 +114,17 @@
   }
 
   @media (min-width: 400px) {
-    width: 400px;
+    width: 90vw;
+    font-size: 1.5em;
+  }
+
+  @media (min-width: 760px) {
+    width: 60vw;
   }
 
   @media (min-width: 990px) {
     font-size: 1.4em;
-    width: 330px;
+    width: 34vw;
   }
 
   @media (min-width: 1400px) {
@@ -122,18 +139,31 @@
 
 // recent article description
 .recent-article-desc {
+  @media (min-width: 100px) {
+    font-size: 0.8em;
+    width: 250px;
+  }
+
   @media (min-width: 300px) {
     width: 300px;
   }
+
   @media (min-width: 375px) {
     width: 350px;
   }
 
   @media (min-width: 400px) {
+    font-size: 0.85em;
     width: 400px;
   }
 
+  @media (min-width: 760px) {
+    font-size: 0.9em;
+    width: 60vw;
+  }
+
   @media (min-width: 990px) {
+    font-size: 1em;
     width: 35vw;
   }
 
@@ -150,6 +180,11 @@
 .recent-article-date-time {
   font-weight: 100;
 
+  @media (min-width: 100px) {
+    font-size: 0.8em;
+    width: 250px;
+  }
+
   @media (min-width: 300px) {
     width: 300px;
   }
@@ -159,6 +194,11 @@
 
   @media (min-width: 400px) {
     width: 400px;
+  }
+
+  @media (min-width: 760px) {
+    font-size: 1em;
+    width: 50vw;
   }
 
   @media (min-width: 990px) {
